--- a/info.html
+++ b/info.html
@@ -8,19 +8,25 @@
          body {
             background-image: url(./Imagem/Fundo.jpeg);
             background-repeat: no-repeat;
-            background-size: cover;
-            overflow-y: hidden; 
+            background-size: 395px 555px;
+            overflow-y: hidden;
         }
+        p {
+            font-size: 12px;
+            text-align: center;
+            margin-top: 123px;
+        }
+
     </style>
 </head>
 <body>
 
     <p>- não tenha vergonha de chorar. <br> <br>
-        - chegue com antecedência! Te aguardo na cerimônia que é a parte mais importante do casamento. <br> <br>
-        - seu celular é bem-vindo, tire  muitas fotos. Mas cuidado para não atrapalhar a equipe de foto. <br> <br>
-        - por favor, não levem pessoas que não foram convidadas. <br> <br>
-        - Para as pessoas que bebem bebidas alcoólicas, traze o que for beber. <br> <br> <br>
-        - NÃO SE ESQUEÇA DE CONFIRMAR A SUA PRESENÇA.</p>
+        - chegue com antecedência! <br> Te aguardo na cerimônia que é a parte <br> mais importante do casamento. <br> <br>
+        - seu celular é bem-vindo, tire  muitas fotos. <br> Mas cuidado para não atrapalhar a equipe de foto. <br> <br>
+        - por favor, não levem pessoas que <br> não foram convidadas. <br> <br>
+        - Para as pessoas que bebem bebidas alcoólicas, <br> traze o que for beber. <br> <br> <br>
+        - NÃO SE ESQUEÇA DE <br> CONFIRMAR A SUA PRESENÇA.</p>
     
 </body>
 </html>
