--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
   img {
     width: 320px;
     height: 500px;
-    display: flex;
-    margin: auto;
+    justify-content: center;
+    align-items: center;
+    margin-top: 90px;
+    margin-left: 500px;
   }
 
   .link{
