--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
 
     <style>
         body {
-    padding: 0px;
-    margin: 0px;
     overflow-y: hidden;
   }
 
   img {
-    width: 320px;
-    height: 500px;
-    justify-content: center;
-    align-items: center;
+    width: 370px;
+    height: 450px;
+    margin-top: 100px;
+    margin-left: 20px;
   }
 
   .link{
